--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(transparent, #0000ff);
+    /* background: linear-gradient(transparent, #0000ff); */
     border-radius: 12px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(#D7DBDD, #0000ff);
+    /* background: linear-gradient(#D7DBDD, #0000ff); */
 }
 
 @media (max-width: 576px) {
@@ -23,11 +23,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(transparent, #0000ff);
+    /* background: linear-gradient(transparent, #0000ff); */
     border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(#D7DBDD, #0000ff);
+    /* background: linear-gradient(#D7DBDD, #0000ff); */
 }
 }
