--- a/src/App.css
+++ b/src/App.css
@@ -1240,3 +1240,339 @@ ol.type li a:hover {
 .fade-in.appear {
   opacity: 1;
 } */
+
+.grey-line{
+  height: 1px;background-color: #3d3d3d;
+  margin-left: 12%;
+  margin-right: 12%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+/* # Pricing */
+.pricing-div{
+  /* background-color:rgb(158, 156, 156); */
+  padding: 1px;
+}
+.pricing h2{
+  font-size: 40px;font-weight: 400;
+  color:#0f0f0f;
+  margin: 0;margin-bottom: 50px;
+  /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif */
+}
+/* .pricing p{margin-top: 0;
+  margin-bottom: 30px;
+  font-size: 40px;
+  color:#cb2727;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700;
+} */
+.pricing .section-header{
+  margin-top: 30px;
+}
+.pricing .box {
+  margin-bottom: 40px;
+  padding: 30px 0px;
+  background: rgb(238, 235, 235);
+  text-align: center;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  border-radius: 4px;
+  position: relative;
+  overflow: hidden;
+  transition: 0.3s;
+}
+.pricing .box:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
+}
+.pricing h3 {
+  font-weight: 700;
+  font-size: 25px;
+  /* margin-bottom: 15px; */
+}
+.pricing .price {
+  font-size: 36px;
+  color: #444444;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+}
+.pricing .price sup {
+  font-size: 20px;
+  top: -15px;
+  left: -3px;
+}
+.pricing .price span {
+  color: #bababa;
+  font-size: 16px;
+  font-weight: 300;
+}
+.pricing img {
+  padding: 20px 40px;
+}
+.pricing ul {
+  padding: 0;
+  list-style: none;
+  color: #444444;
+  text-align: center;
+  line-height: 26px;
+  font-size: 16px;
+  /* margin-bottom: 25px; */
+}
+.pricing ul li {
+  padding-bottom: 3px;
+}
+.pricing ul .na {
+  color: #ccc;
+  text-decoration: line-through;
+}
+.pricing .btn-buy {
+  display: inline-block;
+  padding: 8px 40px 10px 40px;
+  border-radius: 50px;
+  color: #cb2727;
+  transition: none;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  transition: 0.3s;
+  border: 1px solid #cb2727;
+}
+.pricing .btn-buy:hover {
+  background: #cb2727;
+  color: #fff;text-decoration: none;
+}
+.pricing .featured {
+  width: 200px;
+  position: absolute;
+  top: 18px;
+  right: -68px;
+  transform: rotate(45deg);
+  z-index: 1;
+  font-size: 14px;
+  padding: 1px 0 3px 0;
+  background: #cb2727;
+  color: #fff;
+}
+
+.testimonials .section-header{
+    padding: 30px;
+}
+.testimonials .section-header h2{
+  color: #e33535;font-weight: 500;
+  font-size: 45px;
+}
+
+.testimonials .testimonial-item {
+  border-radius: 10px;
+  box-sizing: content-box;
+  padding: 20px;
+  padding-top: 10px;
+  margin: 40px 30px;
+  box-shadow: 0px 0 20px rgba(1, 41, 112, 0.1);
+  background: #fff;
+  min-height: 320px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  transition: 0.3s;
+}
+.testimonials .testimonial-item .stars {
+  margin-bottom: 15px;
+}
+.testimonials .testimonial-item .stars i {
+  color: #ffc107;
+  margin: 0 1px;
+}
+.testimonials .testimonial-item .testimonial-img {
+  height:90px ;
+  width: 90px;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  margin: 0 auto;
+}
+.testimonials .testimonial-item h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0 20px 0px;
+  color: #111;
+}
+
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 0 auto 15px auto;
+}
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid ;
+}
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #c62f2f;
+}
+.testimonials .swiper-slide {
+  opacity: 0.3;
+}
+@media (max-width: 1199px) {
+  .testimonials .swiper-slide-active {
+    opacity: 1;
+  }
+  .testimonials .swiper-pagination {
+    margin-top: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .testimonials .swiper-slide-next {
+    opacity: 1;
+    transform: scale(1.12);
+  }
+}
+
+
+
+/* faq */ 
+.faq{
+  background-color: #e33535;
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+.faq .content h3{
+font-weight: 800;
+font-size: 30px;
+padding-left: 50px;
+padding-bottom: 10px;
+}
+.faq a:hover, a:focus{
+ text-decoration: none !important;
+ outline: none !important;
+ 
+}
+.panel-group .panel{
+ background-color: #fff;
+ border:none;
+ box-shadow:none;
+ border-radius: 10px;
+ margin-bottom:11px;
+}
+.panel .panel-heading{
+ padding: 0;
+ border-radius:10px;
+ border: none;
+}
+.panel-heading a{
+ color:#816d6d !important;
+ display: block;
+ border:none;
+ padding:20px 35px 20px;
+ font-size: 20px;
+ background-color:rgb(255, 254, 254);
+ font-weight:600;
+ position: relative;
+ color:#fff;
+ box-shadow:none;
+ transition:all 0.1s ease 0;
+}
+.panel-heading a:after, .panel-heading a.collapsed:after{
+ content: "-";
+ text-align: center;
+ position: absolute;
+ left:-20px;
+ top: 10px;
+ color:#d02b2b !important;
+ background-color:#fff;
+ border: 5px solid #fff;
+ font-size: 15px;
+ width: 40px;
+ height:40px;
+ line-height: 30px;
+ border-radius: 50%;
+ transition:all 0.3s ease 0s;
+}
+.panel-heading:hover a:after,
+.panel-heading:hover a.collapsed:after{
+ transform:rotate(360deg);
+}
+.panel-heading a.collapsed:after{
+ content: "+";
+}
+#accordion .panel-body{
+ background-color:#e6e4e4;
+ color:#8C8C8C;
+ line-height: 25px;
+ padding: 10px 25px 5px 35px ;
+ border-top:none;
+ font-size:14px;
+ position: relative;
+}
+.text-white{
+ color:white;
+ text-transform: uppercase;
+}
+
+.loader {
+ display: inline-block;
+ width: 30px;
+ height: 30px;
+ position: relative;
+ border: 4px solid #Fff;
+ top: 50%;
+ animation: loader 2s infinite ease;
+}
+
+.loader-inner {
+ vertical-align: top;
+ display: inline-block;
+ width: 100%;
+ background-color: #fff;
+ animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+ 0% {
+   transform: rotate(0deg);
+ }
+ 
+ 25% {
+   transform: rotate(180deg);
+ }
+ 
+ 50% {
+   transform: rotate(180deg);
+ }
+ 
+ 75% {
+   transform: rotate(360deg);
+ }
+ 
+ 100% {
+   transform: rotate(360deg);
+ }
+}
+
+@keyframes loader-inner {
+ 0% {
+   height: 0%;
+ }
+ 
+ 25% {
+   height: 0%;
+ }
+ 
+ 50% {
+   height: 100%;
+ }
+ 
+ 75% {
+   height: 100%;
+ }
+ 
+ 100% {
+   height: 0%;
+ }
+}
